vhdl-fmt/tests/snapshots/architecture__architecture_with_block_declaration.snap
---
source: vhdl-fmt/tests/architecture.rs
expression: "format_str(\"architecture  arch  of  foo  is begin    block is begin end block;  end  arch ;\")"
---
architecture arch of foo is
begin
    block is
    begin
    end block;
end arch;
