vhdl-fmt/tests/snapshots/architecture__architecture_with_statmeents.snap
---
source: vhdl-fmt/tests/architecture.rs
expression: "format_str(\"architecture  arch  of  foo  is  begin foo <= '1';  end  arch ;\")"
---
architecture arch of foo is
begin
    foo<= '1';
end arch;
