vhdl-fmt/tests/snapshots/architecture__architecture_with_statmeents_and_declarations.snap
---
source: vhdl-fmt/tests/architecture.rs
expression: "format_str(\"architecture  arch  of  foo  is signal foo: bit;  begin x <= '1';  end  arch ;\")"
---
architecture arch of foo is
    signal foo: bit;
begin
    x<= '1';
end arch;
