vhdl-fmt/tests/snapshots/architecture__empty_architecture-2.snap
---
source: vhdl-fmt/tests/architecture.rs
expression: "format_str(\"architecture  arch  of  foo  is  begin  end  architecture  arch ;\")"
---
architecture arch of foo is
begin
end architecture arch;
