vhdl-fmt/tests/snapshots/architecture__empty_architecture.snap
---
source: vhdl-fmt/tests/architecture.rs
expression: "format_str(\"architecture  arch  of  foo  is  begin  end  arch ;\")"
---
architecture arch of foo is
begin
end arch;
